# conjockey

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
conjockey/: errors.rs  lib.rs
conjockey/float/: float.rs  impls.rs  mod.rs
conjockey/float/tests/: mod.rs  test_impls.rs  test_impls_signed.rs  test_ops_algebraic.rs  test_plist.rs  test_toml.rs
conjockey/integer/: impls.rs  integer.rs  json.rs  mod.rs  yaml.rs
conjockey/integer/tests/: mod.rs  test_impls.rs  test_impls_signed.rs  test_impls_unsigned.rs  test_ops_algebraic.rs  test_ops_logical.rs  test_plist.rs  test_toml.rs
conjockey/traits/: mod.rs  number.rs
conjockey/traits/ops/: algebraic.rs  logical.rs  mod.rs
conjockey/value/: json.rs  mod.rs  plist.rs  tera.rs  toml.rs  value.rs  yaml.rs
conjockey/value/boolean/: impls.rs  json.rs  mod.rs  toml.rs  yaml.rs
conjockey/value/boolean/tests/: mod.rs  test_impls.rs  test_plist.rs  test_serde_json.rs  test_serde_yaml.rs  test_tera.rs  test_toml.rs
conjockey/value/float/: impls.rs
conjockey/value/float/tests/: mod.rs  test_impls.rs  test_plist.rs  test_serde_json.rs  test_serde_yaml.rs  test_tera.rs  test_toml.rs
conjockey/value/integer/: impls.rs
conjockey/value/integer/tests/: mod.rs  test_impls.rs  test_plist.rs  test_serde_json.rs  test_serde_yaml.rs  test_tera.rs  (+1 more)
conjockey/value/null/: impls.rs
conjockey/value/string/: impls.rs  impls_os_str_display.rs  mod.rs
tests/: test_serde_json.rs  test_serde_yaml.rs
tests/serde_yaml_seeming_incoherence_with_serde_json/: caught.rs  caught.stderr
(+13 files in other folders)
