cargo-features = ["per-package-target", "edition2024"]

[package]
name = "conjockey"
version = "0.0.0"
edition = "2024"
description = "CONfiguration JOCKEY"
autobins = false
autoexamples = false
autobenches = false
homepage = "https://github.com/gabrielfalcao/conjockey"
authors = ["Gabriel Falcão DeMoura <gabrielteratos@gmail.com>"]
license = "CC0-1.0"

[lib]
name = "conjockey"
path = "conjockey/lib.rs"
test = true
doctest = false

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
indexmap = { version = "2.7.1", features = ["serde"] }

serde_json = { version = "1.0.140", features = ["indexmap", "preserve_order"]}
# serde_yaml = { version = "0.9.34", optional = true }
# toml = { version = "0.8.20", features = ["indexmap", "preserve_order"], optional = true }
# rust-ini = { version = "0.21.1", features = ["brackets-in-section-names"], optional = true }
# plist = { version = "1.7.0", optional = true }
# tera = { version = "1.20.0", features = ["preserve_order", "date-locale"], optional = true }

[features]
# serde_json = ["dep:serde_json"]
# serde_yaml = ["dep:serde_yaml"]
# toml = ["dep:toml"]
# rust-ini = ["dep:rust-ini"]
# plist = ["dep:plist"]
# tera = ["dep:tera"]
